Enroll a technique's shapes along with the technique
"dismantle barrage" and "dismantle net" answered with no match, because
nothing was ever enrolled for them: they are their own command keys, so
enrolling Dismantle got you the single slash and left the other two as
separate things to find out about. Nothing said so, and the overlay
listed only the first of the three.

They now belong to the ability. /jjkvoice enroll sukuna_dismantle takes
the incantation's three lines and all three shapes in one sitting, and
the overlay lists every shape once the incantation is recited through,
rather than the first and a silence about the rest.

/jjkvoice status lists chantable abilities in their own right too. They
are not command keys -- an ability is charged by its incantation and
thrown by naming a shape -- so walking the command map alone left the
incantations invisible, which is the one place a missing enrollment is
easy to overlook.

Pips now follow the ability rather than the row count, since a Dismantle
recited through is three rows of the same one.